--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,10 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background:whitesmoke;
+}
 .dropdown {
   z-index: 2;
   position: absolute;
@@ -22,7 +26,8 @@
 .dropdown .dropdown-content {
   width: 100%;
   position: absolute;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
+  background-color: lightgray;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,7 +43,9 @@
   color: #931d25;
 }
 .dropdown .dropdown-link:hover {
-  color: #ffffff;
+  /* color: #ffffff; */
+  color: lightgray;
+  font-weight: bold;
   background-color: #931d25;
 }
 .dropdown .dropdown-hidden {
@@ -59,7 +66,7 @@
   width: 75%;
 }
 .tabs .tabs-item .tabs-item-title {
-  font-size: 24px;
+  font-size: 34px;
   font-weight: bold;
   padding-bottom: 10px;
 }
@@ -68,24 +75,33 @@
 }
 .tabs .tabs-links {
   display: flex;
-  background-color: #931d25;
+  /* background-color: #931d25; */
+  background-color: lightgray;
+
 }
 .tabs .tabs-link {
   padding: 20px 25px;
   font-size: 24px;
-  background-color: #931d25;
+  /* background-color: #931d25; */
+  background-color: lightGray;
   border-right: 1px solid white;
-  color: #ffffff;
+  /* color: #ffffff; */
+  color: #931d25;
   cursor: pointer;
 }
 .tabs .tabs-link:hover {
-  background-color: #be2530;
+  /* background-color: #be2530; */
+  background-color: white;
+  font-weight: bold;
 }
 .tabs .tabs-link-selected {
   z-index: 2;
   border-right: 1px solid #931d25;
-  background-color: #ffffff;
-  color: black;
+  /* background-color: #ffffff; */
+  background-color:gray;
+  /* color: black; */
+  color: #931d25;
+  font-weight: bold;
 }
 .tabs .tabs-link-selected:hover {
   background-color: #ffffff;
